--- a/texts/es_MX.lang
+++ b/texts/es_MX.lang
@@ -4,7 +4,7 @@ skin.Dreamers.JosFlix7=JosFlix7
 skin.Dreamers.JosFlix7_Sueter=JosFlix7 (Sueter)
 skin.Dreamers.JosFlix7_Traje=JosFlix7 (Traje)
 skin.Dreamers.JosFlix7_Fake=JosFlix7 Falso
-skin.Dreamers.JosFlix7_Girl=JosFlix7 Girl
+skin.Dreamers.JosFlix7_Girl=JosFlix7 Chica
 skin.Dreamers.JosFlix7_Legacy=JosFlix7 de Legado
 skin.Dreamers.JosFlix7_Legacy2=JosFlix7 de Legado (2da Skin)
 skin.Dreamers.KeyDream=KeyDream
