--- a/texts/en_US.lang
+++ b/texts/en_US.lang
@@ -4,19 +4,31 @@ skin.Dreamers.JosFlix7=JosFlix7
 skin.Dreamers.JosFlix7_Sueter=JosFlix7 (Sweater)
 skin.Dreamers.JosFlix7_Traje=JosFlix7 (Suit)
 skin.Dreamers.JosFlix7_Fake=Fake JosFlix7
+skin.Dreamers.JosFlix7_SinChaleco=JosFlix7 (Without vest)
 skin.Dreamers.JosFlix7_Girl=JosFlix7 Girl
+skin.Dreamers.JosFlix7_Girl_SinChaleco=JosFlix7 Girl (Without vest)
 skin.Dreamers.JosFlix7_Legacy=Legacy JosFlix7
 skin.Dreamers.JosFlix7_Legacy2=Legacy JosFlix7 (2nd Skin)
+
 skin.Dreamers.KeyDream=KeyDream
 skin.Dreamers.KeyDream_Traje=KeyDream (Suit)
 skin.Dreamers.FraJul11=Legacy KeyDream (a.k.a FraJul11)
+
 skin.Dreamers.Danny_Phantom=Danny Phantom
+
 skin.Dreamers.Rikka_Takanashi=Rikka Takanashi
 skin.Dreamers.Yuuta_Togashi=Yuuta Togashi
+
 skin.Dreamers.Shiro=Shiro
 skin.Dreamers.Sora=Sora
+
 skin.Dreamers.Jonesy=Jonsey I
 skin.Dreamers.Sans=Sans
 skin.Dreamers.Ricardo_Milos=Ricardo Milos
 skin.Dreamers.Batman=Batman
+
 skin.Dreamers.Baroque_Virus=Baroque Virus
+
+skin.Dreamers.ClawdeenWolf=Clawdeen wolf <3
+skin.Dreamers.FrankieStein=Frankie Stein
+skin.Dreamers.Quackity=Quackity
