--- a/texts/es_MX.lang
+++ b/texts/es_MX.lang
@@ -32,3 +32,5 @@ skin.Dreamers.Baroque_Virus=Baroque Virus
 skin.Dreamers.ClawdeenWolf=Clawdeen wolf <3
 skin.Dreamers.FrankieStein=Frankie Stein
 skin.Dreamers.Quackity=Quackity
+
+skin.Dreamers.Earth=Minecraft Earth (Rehecho para Java)
