--- a/texts/en_US.lang
+++ b/texts/en_US.lang
@@ -7,14 +7,16 @@ skin.Dreamers.JosFlix7_Fake=Fake JosFlix7
 skin.Dreamers.JosFlix7_SinChaleco=JosFlix7 (Without vest)
 skin.Dreamers.JosFlix7_Girl=JosFlix7 Girl
 skin.Dreamers.JosFlix7_Girl_SinChaleco=JosFlix7 Girl (Without vest)
+skin.Dreamers.JosFlix7_Girl_Fake=JosFlix7 Girl Fake
 skin.Dreamers.JosFlix7_Legacy=Legacy JosFlix7
 skin.Dreamers.JosFlix7_Legacy2=Legacy JosFlix7 (2nd Skin)
 
-skin.Dreamers.KeyDream=KeyDream
-skin.Dreamers.KeyDream_Traje=KeyDream (Suit)
+skin.Dreamers.KeyDream=KeyPzk
+skin.Dreamers.KeyDream_Traje=KeyPzk (Suit)
 skin.Dreamers.FraJul11=Legacy KeyDream (a.k.a FraJul11)
 
 skin.Dreamers.Danny_Phantom=Danny Phantom
+skin.Dreamers.Earth=Minecraft Earth (Java Remade)
 
 skin.Dreamers.Rikka_Takanashi=Rikka Takanashi
 skin.Dreamers.Yuuta_Togashi=Yuuta Togashi
@@ -33,4 +35,5 @@ skin.Dreamers.ClawdeenWolf=Clawdeen wolf <3
 skin.Dreamers.FrankieStein=Frankie Stein
 skin.Dreamers.Quackity=Quackity
 
-skin.Dreamers.Earth=Minecraft Earth (Java Remade)
+skin.Dreamers.Shrek_Desnudo=Naked Shrek
+skin.Dreamers.Shrek_Loli=Shrek Loli
