--- a/texts/es_MX.lang
+++ b/texts/es_MX.lang
@@ -7,14 +7,16 @@ skin.Dreamers.JosFlix7_Fake=Falso JosFlix7
 skin.Dreamers.JosFlix7_SinChaleco=JosFlix7 (Sin chaleco)
 skin.Dreamers.JosFlix7_Girl=JosFlix7 Chica
 skin.Dreamers.JosFlix7_Girl_SinChaleco=JosFlix7 Chica (Sin chaleco)
+skin.Dreamers.JosFlix7_Girl_Fake=Falsa JosFlix7 Chica
 skin.Dreamers.JosFlix7_Legacy=JosFlix7 de Legado
 skin.Dreamers.JosFlix7_Legacy2=JosFlix7 de Legado (2da Skin)
 
-skin.Dreamers.KeyDream=KeyDream
-skin.Dreamers.KeyDream_Traje=KeyDream (Traje)
+skin.Dreamers.KeyDream=KeyPzk
+skin.Dreamers.KeyDream_Traje=KeyPzk (Traje)
 skin.Dreamers.FraJul11=KeyDream de Legado (Antes FraJul11)
 
 skin.Dreamers.Danny_Phantom=Danny Phantom
+skin.Dreamers.Earth=Minecraft Earth (Rehecho para Java)
 
 skin.Dreamers.Rikka_Takanashi=Rikka Takanashi
 skin.Dreamers.Yuuta_Togashi=Yuuta Togashi
@@ -33,4 +35,5 @@ skin.Dreamers.ClawdeenWolf=Clawdeen wolf <3
 skin.Dreamers.FrankieStein=Frankie Stein
 skin.Dreamers.Quackity=Quackity
 
-skin.Dreamers.Earth=Minecraft Earth (Rehecho para Java)
+skin.Dreamers.Shrek_Desnudo=Shrek Desnudo
+skin.Dreamers.Shrek_Loli=Shrek Loli
