--- a/texts/en_US.lang
+++ b/texts/en_US.lang
@@ -8,11 +8,12 @@ skin.Dreamers.JosFlix7_SinChaleco=JosFlix7 (Without vest)
 skin.Dreamers.JosFlix7_Girl=JosFlix7 Girl
 skin.Dreamers.JosFlix7_Girl_SinChaleco=JosFlix7 Girl (Without vest)
 skin.Dreamers.JosFlix7_Girl_Fake=JosFlix7 Girl Fake
+skin.Dreamers.JosFlix7_2016=JosFlix7 (2016 Rework)
 skin.Dreamers.JosFlix7_Legacy=Legacy JosFlix7
 skin.Dreamers.JosFlix7_Legacy2=Legacy JosFlix7 (2nd Skin)
 
-skin.Dreamers.KeyDream=KeyPzk
-skin.Dreamers.KeyDream_Traje=KeyPzk (Suit)
+skin.Dreamers.KeyPzk=KeyPzk
+skin.Dreamers.KeyPzk_Traje=KeyPzk (Suit)
 skin.Dreamers.FraJul11=Legacy KeyDream (a.k.a FraJul11)
 
 skin.Dreamers.Danny_Phantom=Danny Phantom
