--- a/texts/es_MX.lang
+++ b/texts/es_MX.lang
@@ -8,11 +8,12 @@ skin.Dreamers.JosFlix7_SinChaleco=JosFlix7 (Sin chaleco)
 skin.Dreamers.JosFlix7_Girl=JosFlix7 Chica
 skin.Dreamers.JosFlix7_Girl_SinChaleco=JosFlix7 Chica (Sin chaleco)
 skin.Dreamers.JosFlix7_Girl_Fake=Falsa JosFlix7 Chica
+skin.Dreamers.JosFlix7_2016=JosFlix7 (Retrabajo del 2016)
 skin.Dreamers.JosFlix7_Legacy=JosFlix7 de Legado
 skin.Dreamers.JosFlix7_Legacy2=JosFlix7 de Legado (2da Skin)
 
-skin.Dreamers.KeyDream=KeyPzk
-skin.Dreamers.KeyDream_Traje=KeyPzk (Traje)
+skin.Dreamers.KeyPzk=KeyPzk
+skin.Dreamers.KeyPzk_Traje=KeyPzk (Traje)
 skin.Dreamers.FraJul11=KeyDream de Legado (Antes FraJul11)
 
 skin.Dreamers.Danny_Phantom=Danny Phantom
